--- a/PZ_7/MainWindow.xaml
+++ b/PZ_7/MainWindow.xaml
@@ -4,11 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PZ_7"
+        xmlns:pz8="clr-namespace:PZ_8"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
-        <local:Student/>
+        <pz8:Student/>
     </Window.DataContext>
     <Grid Background="Lavender">
         <Menu Height="20" VerticalAlignment="Top">
